@@ -33,14 +33,8 @@ public class IntegerTableCellRendererCode extends AbstractTableCellRendererCode 
     @Override
     public Component getComponent(Component superComponent, JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column) {
         Component c = superComponent;
-        Integer intValue = (Integer) value;
-        String stringValue;
-        if (intValue <= 0) {
-            stringValue = "";
-        } else {
-            stringValue = String.valueOf(intValue);
-        }
-        ((JLabel) c).setText(stringValue);
+        String theValue = value != null ? value.toString() : "";
+        ((JLabel) c).setText(theValue);
         ((JLabel) c).setHorizontalAlignment(SwingConstants.CENTER);
         return c;
     }
